--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@alpinejs/collapse": "^3.15.3",
-        "sweetalert2": "^11.26.17"
+        "sweetalert2": "^11.26.17",
+        "tom-select": "^2.4.3"
     }
 }
